--- a/css/style.css
+++ b/css/style.css
@@ -355,11 +355,13 @@ input {
 }
 
 .course-card-p {
+  padding-bottom: 15px;
   margin-top: 12px;
   font-weight: normal;
   font-size: 14px;
   line-height: 150%;
   color: #ffffff66;
+  border-bottom: 1px solid #292B56;;
 }
 
 .tutor-text {
